# QALoop

./: .gitignore  LICENSE  README.md  README_zh.md
pipelines/: .gitignore  (+2 more)
pipelines/expert_qa_augmentation/: .gitignore  README.md  pyproject.toml
pipelines/expert_qa_augmentation/docs/: README.md  requirements.txt  run_expansion_from_dir_README.md  run_expansion_from_expert_README.md
pipelines/expert_qa_augmentation/examples/: sample_output.jsonl  sample_seeds.jsonl
pipelines/expert_qa_augmentation/processing_records/: GeneLiterature_processed_records.jsonl
pipelines/expertq_generatea/: .gitignore  README.md  llm_api_log.csv  pyproject.toml  requirements-dev.txt  requirements.txt  seed_Q_generate_A_v1.py  seed_Q_generate_A_v1_README.md  seed_Q_generate_A_v2.py  seed_Q_generate_A_v2_README.md  simple_text_prompt_v8.txt
pipelines/expertq_generatea/01_data_processing/: merge_seed_questions.py  process_seed_questions.py
pipelines/expertq_generatea/bio_agent/: hypothetical_answer_agent.py  rewrite_agent.py
pipelines/expertq_generatea/bio_requests/: chat_request.py  rag_request.py
pipelines/expertq_generatea/config/: app_config_dev.yaml.example  app_config_prod.yaml.example  global_storage.py
pipelines/expertq_generatea/dto/: bio_document.py
pipelines/expertq_generatea/rag_server/: README.md  README_zh.md  main.py  requirements.txt  run.sh
pipelines/expertq_generatea/service/: hypothetical_answer.py
pipelines/expertq_generatea/utils/: bio_hash.py  bio_logger.py  file_util.py  http_util.py  i18n_context.py  i18n_messages.py  i18n_types.py  i18n_util.py  snowflake_id.py  token_util.py
pipelines/kg_synthesis/: README.md  README_zh.md  build_full_kg_from_csv.py  build_kg_from_csv.py  config.py  llm_answer_validator.py  llm_client.py  llm_enhanced_kg_qa_generator_v1.py  pyproject.toml  requirements.txt
pipelines/kg_synthesis/examples/: sample_kg.csv  sample_output.jsonl
pipelines/kg_synthesis/kg_system/: __init__.py  analyzer.py  api.py  config.py  database.py  importer.py
pipelines/kg_synthesis/llm/: llm_client.py
pipelines/qa_data_acquisition_quality/: README.md  README_zh.md  call_api.py  pyproject.toml  requirements.txt  verify_qa_local.py
pipelines/qa_data_acquisition_quality/examples/: sample_output.jsonl  sample_qa.jsonl
pipelines/qa_data_acquisition_quality/outputs/: qa_verification_report.json  verified_test.jsonl
pipelines/wiki_synthesis/: .gitignore  README.md  pyproject.toml  requirements.txt  test_wiki_v2.py  wiki_qa_bert_qw_v4.py
pipelines/wiki_synthesis/biobert/: chinese_agricultural_keywords.txt  chinese_agriculture_keywords.txt  english_agricultural_keywords.txt  english_agriculture_keywords.txt  main_classifier.py  nohup.out  run_classification.sh  run_ultra_precision.py  test_classifier.py  test_improved_bm25.py  中国农业关键词.xlsx
pipelines/wiki_synthesis/examples/: keywords.xlsx  output_v2_test.jsonl
platform/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  README_zh.md  pyproject.toml
platform/qa_annotate/: bootstrap.py  config.py  main.py
platform/qa_annotate/api/: analysis.py  annotation.py  auth.py  dataset.py  project.py  seed_question.py  system_config.py  user.py
platform/scripts/: backup_db.py  create_superuser.py  init_question_types.py  migrate_5004789_to_9149bd8.py  migrate_add_projects.py  migrate_add_user_fields.py  space_entrypoint.sh  space_init.py
platform/seed/: demo.sql  llm-analysis-2026-06-15_en.md  llm-analysis-2026-06-15_zh.md
(+150 files in other folders)
