[project]
name = "expertq-generatea"
version = "1.0.0"
description = "Multi-model expert QA generation with RAG support (31+ LLM models)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "loguru>=0.7.0",
    "asgi-correlation-id>=4.3.4",
    "uvicorn[standard]>=0.44.0",
    "fastapi>=0.135.3",
    "elasticsearch>=9.3.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "redis>=5.0.0",
    "elasticsearch>=8.11.0",
    "pymilvus>=2.3.0",
]
dev = [
    "pytest>=7.0.0",
]
