[project]
name = "qa-data-acquisition-quality"
version = "1.0.0"
description = "QA quality verification with multi-dimensional scoring"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "jsonlines>=3.1.0",
    "tqdm>=4.65.0",
]
